rustdocs/errors/rust-bitcoin-bitcoin-src-blockdata-script-owned.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:9:5
  |
9 | use super::{
  |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `opcodes`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:16:12
   |
16 | use crate::opcodes::all::*;
   |            ^^^^^^^ use of unresolved module or unlinked crate `opcodes`
   |
help: you might be missing a crate named `opcodes`, add it to your project and import it in your code
   |
 3 + extern crate opcodes;
   |

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:4:5
  |
4 | use core::ops::Deref;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `hex`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:6:5
  |
6 | use hex::FromHex as _;
  |     ^^^ use of unresolved module or unlinked crate `hex`
  |
help: you might be missing a crate named `hex`, add it to your project and import it in your code
  |
3 + extern crate hex;
  |

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:7:5
  |
7 | use internals::ToU64 as _;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `crate::key`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:13:12
   |
13 | use crate::key::{
   |            ^^^ use of unresolved module or unlinked crate `key`
   |
help: you might be missing a crate named `key`, add it to your project and import it in your code
   |
 3 + extern crate key;
   |

error[E0432]: unresolved import `crate::opcodes`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:17:22
   |
17 | use crate::opcodes::{self, Opcode};
   |            -------   ^^^^ no `opcodes` in the root
   |            |
   |            help: a similar name exists in the module: `Opcode`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:19:12
   |
19 | use crate::script::witness_program::{WitnessProgram, P2A_PROGRAM};
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
 3 + extern crate script;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:20:12
   |
20 | use crate::script::witness_version::WitnessVersion;
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
 3 + extern crate script;
   |

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:18:12
   |
18 | use crate::prelude::Vec;
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:21:21
   |
21 | use crate::script::{self, ScriptHash, WScriptHash};
   |                     ^^^^ no `script` in the root

error[E0432]: unresolved import `crate::taproot`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:22:12
   |
22 | use crate::taproot::TapNodeHash;
   |            ^^^^^^^ use of unresolved module or unlinked crate `taproot`
   |
help: you might be missing a crate named `taproot`, add it to your project and import it in your code
   |
 3 + extern crate taproot;
   |

error[E0432]: unresolved imports `crate::consensus`, `crate::internal_macros`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/owned.rs:23:13
   |
23 | use crate::{consensus, internal_macros};
   |             ^^^^^^^^^  ^^^^^^^^^^^^^^^ no `internal_macros` in the root
   |             |
   |             no `consensus` in the root

error: aborting due to 13 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
